--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ xcuserdata
 *.moved-aside
 *.xcuserstate
 *.xcscmblueprint
+transit/transit.xcodeproj/project.xcworkspace/
 
 ## Obj-C/Swift specific
 *.hmap
